# docker-billing-backend

./: docker-compose.yml
billing-backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
billing-backend/app/: settings.py  urls.py
billing-backend/billing/: admin.py  cron.py  models.py  serializers.py  urls.py  utils.py  views.py
billing-backend/billing/migrations/: 0001_initial.py  0002_alter_customer_created_at_alter_customer_customer_id_and_more.py  0003_subscription.py  0004_alter_subscription_customer_id.py  0005_rename_customer_property_subscription_product.py  0006_alter_subscription_service_id.py  0007_remove_subscription_poc.py  0008_alter_subscription_product.py  0009_alter_subscription_product.py  0010_alter_subscription_product.py  0011_alter_subscription_service_id.py  0012_alter_subscription_service_id.py  0013_billingsummary.py  0014_alter_billingsummary_prefixes_done.py  0015_alter_billingsummary_prefixes_and_more.py  0016_alter_billingsummary_service_id.py  0017_alter_billingsummary_prefixes.py  0018_billingsummaryaggregates.py  0019_billingsetting.py  0020_sensor_sensorbillingsettingmapping.py  0021_sensor_billing_setting_and_more.py  0022_remove_sensor_billing_setting_and_more.py  0023_remove_sensor_billing_settings_and_more.py  0024_alter_sensor_billing_settings.py  0025_billingsettingaggregates.py  0026_rename_sensor_sensor_sensor_id.py  0027_sensor_channel_list.py  0028_alter_sensor_billing_settings.py
billing-backend/billing/tools/: dbhelper.py
